--- a/Web Game.html
+++ b/Web Game.html
@@ -12,7 +12,28 @@
 <body>
 <canvas id="myCanvas" width="480" height="320"></canvas>
 
+
 <script>
+
+// brick constants
+var brickRowCount = 3;
+var brickColumnCount = 5;
+var brickWidth = 75;
+var brickHeight = 20;
+var brickPadding = 10;
+var brickOffsetTop = 30;
+var brickOffsetLeft = 30;
+
+var bricks = [];
+for (c = 0; c < brickColumnCount; c++) {
+	bricks[c] = [];
+	for (r = 0; r < brickRowCount; r++) {
+		bricks[c][r] = {x:0, y:0, status:1};
+		bricks[c][r].x = (c* (brickWidth + brickPadding))  + brickOffsetLeft;
+		bricks[c][r].y = (r* (brickHeight + brickPadding)) + brickOffsetTop;
+	}
+}
+
 
 var canvas = document.getElementById("myCanvas");
 var ctx = canvas.getContext("2d");
@@ -20,10 +41,11 @@ var ballRadius = 10;
 var ballStartSpeed = 1;
 var ball = {x:canvas.width/2, y:canvas.height/2, dx:ballStartSpeed, dy:ballStartSpeed, radius: ballRadius};
 var paddleHeight = 10;
-var paddleWidth = 75;
+var paddleWidth = 100;
 var paddleX = (canvas.width - paddleWidth) / 2;
 var rightPressed = false;
 var leftPressed = false;
+var score = 0;
 
 function endGame() {
 	alert("GAME OVER :)");
@@ -54,14 +76,11 @@ function drawBall() {
 	ctx.beginPath();
 	ctx.arc(ball.x, ball.y, ball.radius, 0, Math.PI*2);
 
-	// check if ball reached edges
-	bounce();
-
 	// update ball location
 	ball.x = ball.x + ball.dx; 
 	ball.y = ball.y + ball.dy;
 
-	ctx.fillStyle = "#0095DD";
+	ctx.fillStyle = "red";
 	ctx.fill();
 	ctx.closePath();
 }
@@ -83,11 +102,61 @@ function drawPaddle() {
 	ctx.closePath();
 }
 
+function collisionDetection() {
+	for (c = 0; c < brickColumnCount; c++) {
+		for (r = 0; r < brickRowCount; r++) {
+			var b = bricks[c][r];
+			if (b.status && (ball.x <= (b.x + brickWidth)) && (ball.x >= b.x) && (ball.y <= (b.y + brickHeight)) && (ball.y >= b.y)) {
+				b.status = 0;
+				score++;
+				if (score == (brickRowCount * brickColumnCount)) {
+					alert("WIN!");
+					document.location.reload();
+				}
+
+				if ((ball.x == b.x) || (ball.x == (b.x + brickWidth))) {
+						ball.dx *= -1;
+				} else {
+						ball.dy *= -1;
+				}
+			
+				}
+			}
+		}	
+}
+
+function drawScore() {
+	ctx.font = "16px Arial";
+	ctx.fillStyle = "orange";
+	ctx.fillText("Score: "+score, 8, 20);
+}
+
 function draw() {
 	ctx.clearRect(0, 0, canvas.width, canvas.height);
+	collisionDetection();
+	drawScore();
+	bounce();
 	drawBall();
 	drawPaddle();
+	drawBricks();
+	requestAnimationFrame(draw);
 }
+
+function drawBricks() {
+	for (c = 0; c < brickColumnCount; c++) {
+		for (r = 0; r < brickRowCount; r++) {
+			var b = bricks[c][r];
+			if (b.status) {
+				ctx.beginPath();
+				ctx.rect(b.x, b.y, brickWidth, brickHeight);
+				ctx.fillStyle = "#0095DD";
+				ctx.fill();
+				ctx.closePath();
+			}
+		}
+	}
+}
+
 
 function keyDownHandler(e) {
 	if (e.keyCode == 39) {
@@ -111,7 +180,7 @@ function keyUpHandler(e) {
 
 document.addEventListener("keydown", keyDownHandler, false);
 document.addEventListener("keyup", keyUpHandler, false);
-setInterval(draw, 10);
+draw();
 
 </script>
 
